
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "codevizpy"
version = "0.1.0"
description = "Code visualization tool"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "codevizpy"}]

[tool.poetry.dependencies]
python = ">=3.10"
python-multipart = "*"
langchain = "*"
openai = "*"

[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "python-multipart",
    "langchain",
    "openai"
]
